# illuu

./: .flake8  .gitignore  CONTRIBUTING.md  Makefile  conftest.py  dump.rdb  illuu.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_phase_a.sh
api/: DECISIONS.md  FAILURE_MODES.md  README.md  app.py
billing/: monetization-architecture.md
cli/: ARCHITECTURE.md  DECISIONS.md  FAILURE_MODES.md  README.md
compliance/: PHASE5_FULL_SPEC.md  evidence-plan.md
docs/: ARCHITECTURE.md  DECISIONS.md  FAILURE_MODES.md  README.md  debugging.md  deployment.md  governance.md  memory.md  onboarding.md  phase1-inventory.md  system_overview.md  workflows.md
finance/: PHASE8.md
global/: PHASE7.md  PHASE7_FULL_SPEC.md
governance/: Dockerfile.monitor  Dockerfile.shield  Makefile  README.md  docker-compose.yml  go.mod
illuu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
integrations/: ARCHITECTURE.md  DECISIONS.md  FAILURE_MODES.md  README.md
intent/: ARCHITECTURE.md  README.md
kernel/: ARCHITECTURE.md  DECISIONS.md
legacy/: PHASE10.md
memory/: ARCHITECTURE.md  DECISIONS.md  FAILURE_MODES.md  README.md  docker-compose.yml
oaas/: ARCHITECTURE.md  DECISIONS.md  FAILURE_MODES.md  README.md  alpha_tracker.py  app.py  autonomous_prospector.py  benchmark.py  finance_adapter.py  indestructible_engine.py  lethal_quantizer.py  mothership.py  nesterov_engine.py  neural_nesterov.py  omega_engine.py  robust_omega_engine.py  sovereign_api.py  stress_test.py
observability/: ARCHITECTURE.md  README.md  standards.md
(+275 files in other folders)
