[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "illuu"
version = "0.1.0"
description = "Illuu AI Operating System"
authors = [{name="Chandan Galani"}]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["illuu"]

[project.scripts]
illuu = "illuu.cli.main:main"
